Fix broken CSS rule.

--- a/static/basic/sass/web.scss
+++ b/static/basic/sass/web.scss
@@ -112,7 +112,7 @@ form#new-user input[type=text], form#new-user input[type=password] {
 }
 
 
-form#new-article input[type=text], form#edit-article[type=text] {
+form#new-article input[type=text], form#edit-article input[type=text] {
   width:80%
 }
 
